* pyqcow
  - add function to set the keys
* add write support ?

File format:
* reference count support

Tools:
* qcowmount - dokan version
  - have it run in background (using CreateProcess)?
  - what about unmount?
  - fix volume size hints
  - create compatible dokan lib

Tests:
* add concurrent open close test
* add concurrent seek test ?
* add password for encrypted QCOW images

20141226
* changes for updated dependencies

20141221
* worked on Python 3 support
* worked on tests

20141205
* worked on test scripts

20141201
* worked on multi-threading support
* code clean up
* worked on version 3 support

20141129
* code clean up

20141112
* code clean up

20141104
* worked on multi-threading support
* removed deprecated functions:
  - libqcow_file_read_random
  - pyqcow file.read_random

20141029
* bug fix in Python-bindings

20141027
* changes for deployment

20141021
* changes for deployment

20141001
* worked on stand-alone libcstring support

20140920
* changes for project site move

20140801
* bug fix in Python-bindings

20140729
* updated dependencies

20140625
* code clean up

20140330
* code clean up

20140328
* worked on Python bindings

20140317
* worked on Python bindings
* worked on setup.py

20140315
* updated libfdata

20140131
* worked on Python bindings

20140119
* 2014 update
* updated dependencies

20131211
* worked on Python bindings

20131209
* worked on Python bindings
  - bug fix for read count behavior change

20131204
* fix for zlib versions that export inflateInit2_ instead of inflateInit2
* fix for handling last compressed cluster block

20131203
* worked on Python bindings

20131201
* worked on Python bindings
  - subtle bug fix where python file-like object returns an int object
    instead of long object
  - improved error reporting
* updated libcerror

20131020
* updated libcstring

20131013
* updated dependencies

20130922
* updated msvscpp files
* removed unused libfvalue

20130916
* worked on libcthreads build support

20130831