@@ -1,13 +1,12 @@
 Source: libqcow
-Section: unknown
+Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev, zlib1g-dev, libssl-dev, libfuse-dev, python-dev
-Standards-Version: 3.8.3
+Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libqcow/
 
 Package: libqcow
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libqcow-dbg
@@ -17,28 +16,28 @@ Description: Library to access the QEMU Copy-On-Write (QCOW) image file format
 Package: libqcow-dbg
 Architecture: any
 Section: debug
-Depends: libqcow (= ${Source-Version}), ${misc:Depends}
+Depends: libqcow (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libqcow
  Debugging symbols for libqcow.
 
 Package: libqcow-dev
 Section: libdevel
 Architecture: any
-Depends: libqcow (= ${Source-Version})
+Depends: libqcow (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libqcow
  Header files and libraries for developing applications for libqcow.
 
 Package: libqcow-tools
 Section: utils
 Architecture: any
-Depends: libqcow (= ${Source-Version}), ${shlibs:Depends}
+Depends: libqcow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: Several tools for reading QEMU Copy-On-Write (QCOW) image files
  Several tools for reading QEMU Copy-On-Write (QCOW) image files.
 
 Package: libqcow-python
 Section: python
 Architecture: any
-Depends: libqcow (= ${Source-Version}), ${shlibs:Depends}, ${python:Depends}
+Depends: libqcow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Suggests: libqcow-python-dbg
 Description: Python bindings for libqcow
  Python bindings for libqcow.
@@ -46,7 +45,7 @@ Description: Python bindings for libqcow
 Package: libqcow-python-dbg
 Section: debug
 Architecture: any
-Depends: libqcow-python (= ${Source-Version})
+Depends: libqcow-python (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libqcow-python
  Debugging symbols for libqcow-python.
 
